Fixed text boxes so they're more readable, map doesn't move

--- a/app/assets/stylesheets/components/_box.scss
+++ b/app/assets/stylesheets/components/_box.scss
@@ -1,4 +1,5 @@
 .grey-box {
+  font-weight: bold;
   background-color: rgb(230,230,230);
   padding: 24px;
   border-radius: $border-radius;
